# aiogram_ui

./: README.md  pyproject.toml  requirements.txt
aiogram_ui/: __init__.py
aiogram_ui/callback/: __init__.py  callback_data.py  filterable_str.py
aiogram_ui/deep_link/: __init__.py  deep_link.py
aiogram_ui/inline_keyboard/: __init__.py  b_action.py  ikb.py  ikm.py
aiogram_ui/layouts/: __init__.py  context.py  fsm_context.py  handler_dispatcher.py  middleware.py  text_layout_data.py  tools.py
