[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram_ui"
version = "0.0.1"
authors = [{ name = "Andrey Zin", email = "andrey@zin.pw" }]
description = "Tools to easily create ui(buttons, messages, etc ...) for telegram bots powered by aiogram"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["aiogram >= 3.0.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/andreyzin/aiogram-ui"
Issues = "https://github.com/andreyzin/aiogram-ui/issues"
